Bug 1598968 - Make MediaControlUtils a proper header. r=MeFisto94,alwu

Differential Revision: https://phabricator.services.mozilla.com/D54643