dom/media/mediacontrol/MediaControlUtils.h
@@ -7,47 +7,15 @@
 #ifndef DOM_MEDIA_MEDIACONTROL_MEDIACONTROLUTILS_H_
 #define DOM_MEDIA_MEDIACONTROL_MEDIACONTROLUTILS_H_
 
+#include "mozilla/Logging.h"
 #include "MediaController.h"
-#include "MediaControlService.h"
 
-#include "mozilla/dom/BrowsingContext.h"
-#include "mozilla/dom/ContentChild.h"
-#include "nsGlobalWindowOuter.h"
-#include "nsXULAppAPI.h"
-
-mozilla::LazyLogModule gMediaControlLog("MediaControl");
-
-#undef LOG
-#define LOG(msg, ...)                        \
-  MOZ_LOG(gMediaControlLog, LogLevel::Debug, \
-          ("MediaControlUtils, " msg, ##__VA_ARGS__))
+extern mozilla::LazyLogModule gMediaControlLog;
 
 namespace mozilla {
 namespace dom {
 
-static void NotifyMediaActiveChanged(const RefPtr<BrowsingContext>& aBc,
-                                     bool aActive) {
-  if (XRE_IsContentProcess()) {
-    ContentChild* contentChild = ContentChild::GetSingleton();
-    Unused << contentChild->SendNotifyMediaActiveChanged(aBc, aActive);
-  } else {
-    MediaControlService::GetService()
-        ->GetOrCreateControllerById(aBc->Id())
-        ->NotifyMediaActiveChanged(aActive);
-  }
-}
-
-static RefPtr<BrowsingContext> GetBrowingContextByWindowID(uint64_t aWindowID) {
-  RefPtr<nsGlobalWindowOuter> window =
-      nsGlobalWindowOuter::GetOuterWindowWithId(aWindowID);
-  if (!window) {
-    return nullptr;
-  }
-  return window->GetBrowsingContext();
-}
-
-const char* ToMediaControlActionsStr(
-    mozilla::dom::MediaControlActions aAction) {
+inline const char* ToMediaControlActionsStr(MediaControlActions aAction){
   switch (aAction) {
     case MediaControlActions::ePlay:
       return "Play";
@@ -61,45 +29,9 @@ const char* ToMediaControlActionsStr(
   return "UNKNOWN";
 }
 
-void NotifyMediaStarted(uint64_t aWindowID) {
-  RefPtr<BrowsingContext> bc = GetBrowingContextByWindowID(aWindowID);
-  if (!bc || bc->IsDiscarded()) {
-    return;
-  }
-  LOG("Notify media started in BC %" PRId64, bc->Id());
-  bc = bc->Top();
-  NotifyMediaActiveChanged(bc, true);
-}
-
-void NotifyMediaStopped(uint64_t aWindowID) {
-  RefPtr<BrowsingContext> bc = GetBrowingContextByWindowID(aWindowID);
-  if (!bc || bc->IsDiscarded()) {
-    return;
-  }
-  LOG("Notify media stopped in BC %" PRId64, bc->Id());
-  bc = bc->Top();
-  NotifyMediaActiveChanged(bc, false);
-}
-
-void NotifyMediaAudibleChanged(uint64_t aWindowID, bool aAudible) {
-  RefPtr<BrowsingContext> bc = GetBrowingContextByWindowID(aWindowID);
-  if (!bc || bc->IsDiscarded()) {
-    return;
-  }
-  LOG("Notify media became %s in BC %" PRId64,
-      aAudible ? "audible" : "inaudible", bc->Id());
-  bc = bc->Top();
-  if (XRE_IsContentProcess()) {
-    ContentChild* contentChild = ContentChild::GetSingleton();
-    Unused << contentChild->SendNotifyMediaAudibleChanged(bc, aAudible);
-  } else {
-    RefPtr<MediaController> controller =
-        MediaControlService::GetService()->GetControllerById(bc->Id());
-    if (controller) {
-      controller->NotifyMediaAudibleChanged(aAudible);
-    }
-  }
-}
+void NotifyMediaStarted(uint64_t aWindowID);
+void NotifyMediaStopped(uint64_t aWindowID);
+void NotifyMediaAudibleChanged(uint64_t aWindowID, bool aAudible);
 
 }  // namespace dom
 }  // namespace mozilla
